Github live pages overflow fix v2
Fix overflow op Github pages.

--- a/styles/style.css
+++ b/styles/style.css
@@ -271,6 +271,10 @@ hr {
         -webkit-text-fill-color: transparent;
     }
 
+    img {
+      max-width: 100%;
+    }
+
     @media (prefers-color-scheme: dark) {
         background: var(--background-color-dm);
     }
